--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Yellow Cart</title>
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="dropDown.css" />
+    <script
+      src="https://kit.fontawesome.com/71ecf3d565.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="topNav">
-      <p>Offers</p>
-      <p>Fanbook</p>
+      <p>Offer</p>
+      <a href="fanbook.html">Fanbook</a>
       <p>Download App</p>
       <p>TriBe Membership</p>
       <div></div>
@@ -18,20 +23,133 @@
       <p>Track Order</p>
     </div>
     <div id="nav">
-      <img id="bewakoof" src="1111.png" alt="" />
-      <h4>MEN</h4>
-      <h4>WOMEN</h4>
-      <h4>MOBILE COVERS</h4>
+      <img id="bewakoof" src="logo.png" />
+      <div id="menu-bar">
+        <li>
+          <a href="#">MENS</a>
+          <div class="menu1">
+            <ul>
+              <li>Top Wear</li>
+              <div class="submenu1">
+                <ul>
+                  <li>New Arrival</li>
+                  <li>Half Sleeve T-Shirts</li>
+                  <li>Hoodies & Sweatshirts</li>
+                  <li>Long Sleeve T-shirts</li>
+                  <li>Printed T-shirts</li>
+                  <li>Plain T-shirts</li>
+                  <li>Vests</li>
+                  <li>Polo T-Shirts</li>
+                  <li>Kurtas</li>
+                  <li>Combo T-Shirts</li>
+                  <li>Shirts</li>
+                  <li>Nightwear</li>
+                  <li>Plus Size Store</li>
+                </ul>
+              </div>
+              <li>Bottom Wear</li>
+              <div class="submenu1">
+                <ul>
+                  <li>Men's Pajamas</li>
+                  <li>Men's Boxer Shorts</li>
+                  <li>Men's Shorts</li>
+                  <li>Men's Track Pants</li>
+                  <li>Men's Pants</li>
+                </ul>
+              </div>
+              <li>Featured</li>
+              <div class="submenu1">
+                <ul>
+                  <li>Men's Flip Flops</li>
+                  <li>Men's Sliders</li>
+                  <li>Marvel T-Shirts</li>
+                  <li>Disney T-Shirts</li>
+                  <li>Avengers T-Shirts</li>
+                  <li>Star Wars T-Shirts</li>
+                  <li>Batman T-Shirts</li>
+                  <li>Superman T-Shirts</li>
+                  <li>Joker T-Shirts</li>
+                </ul>
+              </div>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <a href="#">WOMENS</a>
+          <div class="menu1">
+            <ul>
+              <li>TOP WEAR</li>
+              <div class="submenu1">
+                <ul>
+                  <li>New Arrival</li>
+                  <li>Half Sleeve T-Shirts</li>
+                  <li>Hoodies & Sweatshirts</li>
+                  <li>Long Sleeve T-shirts</li>
+                  <li>Printed T-shirts</li>
+                  <li>Plain T-shirts</li>
+                  <li>Combo T-Shirts</li>
+                  <li>Shirts</li>
+                  <li>Nightwear</li>
+                  <li>Plus Size Store</li>
+                </ul>
+              </div>
+              <li>BOTTOM WEAR</li>
+              <div class="submenu1">
+                <ul>
+                  <li>Pajamas</li>
+                  <li>Boxer Shorts</li>
+                  <li>Shorts</li>
+                  <li>Track Pants</li>
+                  <li>Pants</li>
+                </ul>
+              </div>
+              <li>BAGS</li>
+              <div class="submenu1">
+                <ul>
+                  <li>Small Bag</li>
+                  <li>Purse</li>
+                </ul>
+              </div>
+              <li>FEATURED</li>
+              <div class="submenu1">
+                <ul>
+                  <li>Flip Flops</li>
+                  <li>Slides</li>
+                </ul>
+              </div>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <a href="#">MOBILE COVER</a>
+          <div class="menu1">
+            <ul>
+              <li>Apple</li>
+              <li>Vivo</li>
+              <li>Samsung</li>
+              <li>Redmi</li>
+              <li>Oneplus</li>
+              <li>Oppo</li>
+              <li>Xiomi</li>
+            </ul>
+          </div>
+        </li>
+      </div>
       <div></div>
-      <input
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <i id="search" class="fa-sharp fa-solid fa-magnifying-glass"></i>
+      <input 
         type="text"
-        placeholder="🔍Search by product,category or collection"
+        placeholder="Search by product,category or collection"
       />
       <h4>|</h4>
-      <p>👩‍💼</p>
+      <p><i class="fa-solid fa-user-ninja"></i></p>
       <p>🤍</p>
-      <p>👜</p>
-      <p>🟠</p>
+      <p><i class="fa-sharp fa-solid fa-cart-shopping"></i></p>
+      <p><img id="india" src="https://images.bewakoof.com/web/india-flag-round-1639566913.png" alt=""></p>
     </div>
 
     <div id="midNav">
@@ -57,11 +175,28 @@
     </div>
 
     <div id="bottomNav">
-      <img
+      <img class="img"
         src="https://images.bewakoof.com/web/Gender-Picker-Banner-desktop-desktop-4-1667479004.jpg"
         alt=""
       />
     </div>
+    <h4 style="text-align:center; letter-spacing:2px" >THE STOOPID COLLECTION</h4>
+    <div id="matrix2">
+      <div>
+        <img width="100%" src="https://images.bewakoof.com/uploads/grid/app/jackets-mid-size-1667293853.jpg" alt="">
+      </div>
+      <div>
+        <img  width="100%"src="https://images.bewakoof.com/uploads/grid/app/new-mid-banner-2022-playbybewakoof-1666532963.jpg" alt="">
+      </div>
+      <div>
+        <img width="100%"src="https://images.bewakoof.com/uploads/grid/app/undrdawg-mid-banner-1667495646.jpg" alt="">
+      </div>
+      <div>
+        <img width="100%"src="https://images.bewakoof.com/uploads/grid/app/me-shirt-men-1658682131--1--1666890085.png" alt="">
+      </div>
+    </div>
+    <img class="img2" src="https://images.bewakoof.com/uploads/grid/app/desktop---strip-1440---x-150---tribe-1634552003.png" alt="">
+    <img class="img2" src="https://images.bewakoof.com/uploads/grid/app/VoteForDesign-ThinStrip-Desktop-Revised-1667372740.gif" alt="">
     <div id="container">
       <div id="bewakoof2">
         <h3>YellowC@rt</h3>
@@ -84,10 +219,10 @@
         </div>
         <div>
           <h4>CONNECT WITH US</h4>
-          <p>🎦4.7M People Like this</p>
-          <p>🎦1M Followers</p>
+          <p><i class="fa-brands fa-square-facebook"></i> 4.7M People Like this</p>
+          <p><i class="fa-brands fa-square-instagram"></i> 1M Followers</p>
           <div>
-            <img src="Screenshot_11.png" alt="" />
+            <img  src="socialmedia.png" alt="" />
           </div>
         </div>
         <div id="subscribe">
@@ -111,7 +246,7 @@
         </div>
         <div>
           <h4>100% SECURE PAYMENT</h4>
-          <img src="Screenshot_10.png" alt="" />
+          <img src="payment.png" alt="" />
         </div>
       </div>
       <p style="color: white; text-align: center">
@@ -372,127 +507,135 @@
 
 <script>
   let arr = [
-  {
-    id: 1,
-    image:
-      "https://images.bewakoof.com/t640/the-ryuk-full-sleeve-t-shirt-554015-1667974706-1.jpg",
-    title: "Yellow Cart",
-    description: "Men's The Ryuk Graphic Printed T-shirt ()",
-    price: 349,
-    realPrice: 999,
-    tribePrice: 319,
-  },
-  {
-    id: 2,
-    image:
-      "https://images.bewakoof.com/t640/the-ryuk-oversized-full-sleeve-t-shirt-554016-1667974663-1.jpg",
-    title: "Yellow Cart",
-    description: "Men's The Ryuk Graphic Printed T-shirt",
-    price: 599,
-    realPrice: 1499,
-    tribePrice: 519,
-  },
-  {
-    id: 3,
-    image: "https://images.bewakoof.com/t640/the-ryuk-half-sleeve-t-shirt-554010-1667975037-1.jpg",
-    title: "Yellow Cart",
-    description: "Men's The Ryuk Graphic Printed T-shirt",
-    price: 329,
-    realPrice: 999,
-    tribePrice: 309,
-  },
+    {
+      id: 1,
+      image:
+        "https://images.bewakoof.com/t640/the-ryuk-full-sleeve-t-shirt-554015-1667974706-1.jpg",
+      title: "Yellow Cart",
+      description: "Men's The Ryuk Graphic Printed T-shirt ()",
+      price: 349,
+      realPrice: 999,
+      tribePrice: 319,
+    },
+    {
+      id: 2,
+      image:
+        "https://images.bewakoof.com/t640/the-ryuk-oversized-full-sleeve-t-shirt-554016-1667974663-1.jpg",
+      title: "Yellow Cart",
+      description: "Men's The Ryuk Graphic Printed T-shirt",
+      price: 599,
+      realPrice: 1499,
+      tribePrice: 519,
+    },
+    {
+      id: 3,
+      image:
+        "https://images.bewakoof.com/t640/the-ryuk-half-sleeve-t-shirt-554010-1667975037-1.jpg",
+      title: "Yellow Cart",
+      description: "Men's The Ryuk Graphic Printed T-shirt",
+      price: 329,
+      realPrice: 999,
+      tribePrice: 309,
+    },
 
-  {
-    id: 4,
-    image: "https://images.bewakoof.com/t640/men-s-black-what-the-duck-graphic-printed-oversized-t-shirt-553306-1667891652-1.jpg",
-    title: "Yellow Cart",
-    description: "Men's The Ryuk Graphic Printed T-shirt",
-    price: 599,
-    realPrice: 1499,
-    tribePrice: 559,
-  },  
-  {
-    id: 5,
-    image: "https://images.bewakoof.com/t640/the-ryuk-oversized-t-shirt-554020-1667974943-1.jpg",
-    title: "Yellow Cart",
-    description: "Men's The Ryuk Graphic Printed T-shirt",
-    price: 649,
-    realPrice: 1499,
-    tribePrice: 599,
-  },
-  {
-    id: 6,
-    image: "https://images.bewakoof.com/t640/the-ryuk-oversized-t-shirt-554011-1667974782-1.jpg",
-    title: "Yellow Cart",
-    description: "Men's The Ryuk Graphic Printed T-shirt",
-    price: 449,
-    realPrice: 1299,
-    tribePrice: 419,
-  },
-  {
-    id: 7,
-    image: "https://images.bewakoof.com/t640/men-s-black-inspire-graphic-printed-oversized-t-shirt-553301-1667891608-1.jpg",
-    title: "Yellow Cart",
-    description: "Men's The Ryuk Graphic Printed T-shirt",
-    price: 449,
-    realPrice: 1299,
-    tribePrice: 419,
-  },
-  {
-    id: 8,
-    image: "https://images.bewakoof.com/t640/men-s-white-what-the-duck-graphic-printed-oversized-t-shirt-553308-1667891931-1.jpg",
-    title: "Yellow Cart",
-    description: "Men's The Ryuk Graphic Printed T-shirt",
-    price: 599,
-    realPrice: 1499,
-    tribePrice: 559,
-  },
-  {
-    id: 9,
-    image: "https://images.bewakoof.com/t640/the-ryuk-oversized-t-shirt-554011-1667974782-1.jpg",
-    title: "Yellow Cart",
-    description: "Men's The Ryuk Graphic Printed T-shirt",
-    price: 449,
-    realPrice: 1299,
-    tribePrice: 419, 
-  },
- {
-    id: 10,
-    image: "https://images.bewakoof.com/t640/men-s-blue-dope-bear-graphic-printed-oversized-t-shirt-547532-1667563188-1.jpg",
-    title: "Yellow Cart",
-    description: "Men's The Ryuk Graphic Printed T-shirt",
-    price: 537,
-    realPrice: 1299,
-    tribePrice: 489, 
-},
-// {
-//     id: 0,
-//     image: "",
-//     title: "Yellow Cart",
-//     description: "Men's The Ryuk Graphic Printed T-shirt",
-//     price: 0,
-//     realPrice: 0,
-//     tribePrice: 0, 
-// }
-// {
-//     id: 0,
-//     image: "",
-//     title: "Yellow Cart",
-//     description: "Men's The Ryuk Graphic Printed T-shirt",
-//     price: 0,
-//     realPrice: 0,
-//     tribePrice: 0, 
-// }
-// {
-//     id: 0,
-//     image: "",
-//     title: "Yellow Cart",
-//     description: "Men's The Ryuk Graphic Printed T-shirt",
-//     price: 0,
-//     realPrice: 0,
-//     tribePrice: 0, 
-// }
-];
+    {
+      id: 4,
+      image:
+        "https://images.bewakoof.com/t640/men-s-black-what-the-duck-graphic-printed-oversized-t-shirt-553306-1667891652-1.jpg",
+      title: "Yellow Cart",
+      description: "Men's The Ryuk Graphic Printed T-shirt",
+      price: 599,
+      realPrice: 1499,
+      tribePrice: 559,
+    },
+    {
+      id: 5,
+      image:
+        "https://images.bewakoof.com/t640/the-ryuk-oversized-t-shirt-554020-1667974943-1.jpg",
+      title: "Yellow Cart",
+      description: "Men's The Ryuk Graphic Printed T-shirt",
+      price: 649,
+      realPrice: 1499,
+      tribePrice: 599,
+    },
+    {
+      id: 6,
+      image:
+        "https://images.bewakoof.com/t640/the-ryuk-oversized-t-shirt-554011-1667974782-1.jpg",
+      title: "Yellow Cart",
+      description: "Men's The Ryuk Graphic Printed T-shirt",
+      price: 449,
+      realPrice: 1299,
+      tribePrice: 419,
+    },
+    {
+      id: 7,
+      image:
+        "https://images.bewakoof.com/t640/men-s-black-inspire-graphic-printed-oversized-t-shirt-553301-1667891608-1.jpg",
+      title: "Yellow Cart",
+      description: "Men's The Ryuk Graphic Printed T-shirt",
+      price: 449,
+      realPrice: 1299,
+      tribePrice: 419,
+    },
+    {
+      id: 8,
+      image:
+        "https://images.bewakoof.com/t640/men-s-white-what-the-duck-graphic-printed-oversized-t-shirt-553308-1667891931-1.jpg",
+      title: "Yellow Cart",
+      description: "Men's The Ryuk Graphic Printed T-shirt",
+      price: 599,
+      realPrice: 1499,
+      tribePrice: 559,
+    },
+    {
+      id: 9,
+      image:
+        "https://images.bewakoof.com/t640/the-ryuk-oversized-t-shirt-554011-1667974782-1.jpg",
+      title: "Yellow Cart",
+      description: "Men's The Ryuk Graphic Printed T-shirt",
+      price: 449,
+      realPrice: 1299,
+      tribePrice: 419,
+    },
+    {
+      id: 10,
+      image:
+        "https://images.bewakoof.com/t640/men-s-blue-dope-bear-graphic-printed-oversized-t-shirt-547532-1667563188-1.jpg",
+      title: "Yellow Cart",
+      description: "Men's The Ryuk Graphic Printed T-shirt",
+      price: 537,
+      realPrice: 1299,
+      tribePrice: 489,
+    },
+    // {
+    //     id: 0,
+    //     image: "",
+    //     title: "Yellow Cart",
+    //     description: "Men's The Ryuk Graphic Printed T-shirt",
+    //     price: 0,
+    //     realPrice: 0,
+    //     tribePrice: 0,
+    // }
+    // {
+    //     id: 0,
+    //     image: "",
+    //     title: "Yellow Cart",
+    //     description: "Men's The Ryuk Graphic Printed T-shirt",
+    //     price: 0,
+    //     realPrice: 0,
+    //     tribePrice: 0,
+    // }
+    // {
+    //     id: 0,
+    //     image: "",
+    //     title: "Yellow Cart",
+    //     description: "Men's The Ryuk Graphic Printed T-shirt",
+    //     price: 0,
+    //     realPrice: 0,
+    //     tribePrice: 0,
+    // }
+  ];
 
-console.log(arr);
+  console.log(arr);
 </script>
