--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
         <p>
           Founded in 2012, Yellow Cart is a lifestyle fashion brand that makes
           creative, distinctive fashion for the trendy, contemporary Indian.
-          Bewakoof was created on the principle of creating impact through
+          Yellow Cart was created on the principle of creating impact through
           innovation, honesty and thoughtfulness.
         </p>
         <p>
